--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
                         <div class="col-sm col-8 offset-2 offset-sm-0">
                             <div class="shadow-wrapper">
                                 <div class="phone-frame">
-                                    <img class="abs-image" src="/assets/images/screen1.jpg" alt="mc great phone screen">
+                                    <img class="abs-image" src="assets/images/screen1.jpg" alt="mc great phone screen">
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm col-8 offset-2 offset-sm-0">
                             <div class="shadow-wrapper">
                                 <div class="phone-frame">
-                                    <img class="abs-image" src="/assets/images/screen2.jpg" alt="mc great phone screen">
+                                    <img class="abs-image" src="assets/images/screen2.jpg" alt="mc great phone screen">
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm col-8 offset-2 offset-sm-0">
                             <div class="shadow-wrapper">
                                 <div class="phone-frame">
-                                    <img class="abs-image" src="/assets/images/screen3.jpg" alt="mc great phone screen">
+                                    <img class="abs-image" src="assets/images/screen3.jpg" alt="mc great phone screen">
                                 </div>
                             </div>
                         </div>
@@ -106,16 +106,15 @@
             <section class="screens-section">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-8 offset-md-2">
+                        <div class="col-md-8 offset-md-2 ">
                             <div class="section-headline text-center">
                                 <h1 class="h1">Conception soignée</h1>
                                 <p>Mise au point par l’expérience du terrain pour travailler en efficacité. Un logiciel de gestion d’affaire n’a jamais été aussi facile à utiliser. C’est la nouvelle génération de logiciel pour les marques et les grossistes.</p>
                             </div>
                         </div>
-
                     </div>
-                    <div class="row">
-                        <div class="col-sm-6">
+                    <div class="row text-img-row">
+                        <div class="col-sm-6 order-2 order-sm-1">
                             <div class="text-col">
                                 <h3 class="h3">GESTION DE STOCK</h3>
                                 <strong class="subheader">Optimiser vos modèles
@@ -128,26 +127,203 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-sm-4 offset-sm-1">
+                        <div class="col-sm-6 order-1 order-sm-2">
                             <div class="img-col">
                                 <div class="shadow-wrapper">
                                     <div class="phone-frame">
-                                        <img class="abs-image" src="/assets/images/screen4.jpg" alt="mc great phone screen">
+                                        <img class="abs-image" src="assets/images/screen4.jpg" alt="mc great phone screen">
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col text-center">
                             <div class="btn-row">
-                                <button type="button" class="btn btn-primary  btn-lg">Votre transformation digital commence ici ></button>
+                                <button type="button" class="btn btn-primary  btn-lg">Votre transformation digital commence ici &gt;</button>
                             </div>
                         </div>
-
+                    </div>
+                    <div class="row text-img-row">
+                        <div class="col-sm-6">
+                            <div class="img-col">
+                                <div class="shadow-wrapper">
+                                    <div class="phone-frame">
+                                        <img class="abs-image" src="assets/images/screen5.jpg" alt="mc great phone screen">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="text-col">
+                                <h3 class="h3">VENDRE AUTREMENT </h3>
+                                <strong class="subheader">Une relation client personnalisée
+                                            </strong>
+                                <ul>
+                                    <li>Les vendeurs peuvent être au plus près de vos clients et proche de leurs attentes.</li>
+                                    <li>Commander en temps réel avec catalogue photo et informations produits. Les ventes réalisées sont immédiatement intégrées dans votre base de données.</li>
+                                    <li>Une base de données innovante, chaque client est suivi minutieusement. Préférence d’achat, leur fréquence et son état financier. Tout ce que vous cherchez devient plus facile à trouver grâce aux informations centralisés
+                                        et à la synchronisation du système.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row text-img-row">
+                        <div class="col-sm-6 order-2 order-sm-1">
+                            <div class="text-col">
+                                <h3 class="h3">GESTION DES VRP </h3>
+                                <strong class="subheader">Optimiser votre force de vente</strong>
+                                <ul>
+                                    <li>La prise de commande est plus rapide, l’accès au catalogue est simplifié. Les commandes des agents commerciaux sont synchronisés avec vos stocks.</li>
+                                    <li>Vous gérez de manière plus sereine le turnover de vos VRPs avec l’historique (coordonnées des prospects, commande réalisée). En toute sécurité car le revendeur peut enregistrer ses données clients mais accéder seulement
+                                        à son portefeuille client.</li>
+                                    <li>Faites de vos commerciaux, les ambassadeurs de votre marque en diffusant les liens du smart catalogue. </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 order-1 order-sm-2">
+                            <div class="img-col">
+                                <div class="shadow-wrapper">
+                                    <div class="phone-frame">
+                                        <img class="abs-image" src="assets/images/screen6.jpg" alt="mc great phone screen">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row text-img-row">
+                        <div class="col-sm-6">
+                            <div class="img-col">
+                                <div class="shadow-wrapper">
+                                    <div class="phone-frame">
+                                        <img class="abs-image" src="assets/images/screen7.jpg" alt="mc great phone screen">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="text-col">
+                                <h3 class="h3">DIGITALISATION</h3>
+                                <strong class="subheader">Votre présence en ligne</strong>
+                                <ul>
+                                    <li>Développez votre présence en ligne avec un extranet : vous automatisez et simplifiez votre travail au quotidien.</li>
+                                    <li>Ajoutez ou modifiez les informations, ces modifications sont répercutées en temps réel sur votre magasin. La synchronisation est fondamentale pour la digitalisation. Vendre en ligne rapidement et simplement avec toutes
+                                        les informations nécessaires sans avoir à décrocher le téléphone ou à se déplacer.</li>
+                                    <li>Les clients consultent et commandent les modèles sur App client, vos clients seront ultraconnectés, mieux informés et plus avisés que jamais.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col text-center">
+                            <div class="btn-row">
+                                <button type="button" class="btn btn-primary  btn-lg">Votre transformation digital commence ici &gt;</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row text-img-row">
+                        <div class="col-sm-6 order-2 order-sm-1">
+                            <div class="text-col">
+                                <h3 class="h3">OUTILS ANALYTIQUE </h3>
+                                <p>Suivre les comportements des visiteurs de votre App client, et ce, du moment où ils sont prospects jusqu'au moment où ils deviennent des clients. Chaque conversion peut être mesurée, et ce, grâce à deux fonctionnalités
+                                    distinctes : tracking et analyse. Une fois le trafic créé, on cherchera à transformer cette audience en clientèle régulière et connectée par le biais des contenus ciblés. Le lien étant établi, grossiste et marque pourront
+                                    nourrir et faire grandir la relation avec cet extranet de vente grâce à du contenu personnalisé et ciblé afin de fidéliser les clients.</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 order-1 order-sm-2">
+                            <div class="img-col">
+                                <div class="shadow-wrapper">
+                                    <div class="phone-frame">
+                                        <img class="abs-image" src="assets/images/screen8.jpg" alt="mc great phone screen">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row text-img-row">
+                        <div class="col-sm-6">
+                            <div class="img-col">
+                                <div class="shadow-wrapper">
+                                    <div class="phone-frame">
+                                        <img class="abs-image" src="assets/images/screen9.jpg" alt="mc great phone screen">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="text-col">
+                                <h3 class="h3">Maitrise de la trésorerie</h3>
+                                <ul>
+                                    <li>Suivi des dépenses</li>
+                                    <li>Anticipation des variations de trésorerie</li>
+                                    <li>Correction d’éventuels problèmes financiers </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row text-img-row">
+                        <div class="col-sm-4 order-2 order-sm-1">
+                            <div class="text-col">
+                                <h3 class="h3">Base documentaire
+                                </h3>
+                                <p>Avec <strong> MC Printer </strong> toutes vos pièces peuvent être enregistrées et archivées sur votre ordinateur </p>
+                                <ul>
+                                    <li>Impression à distance sur une ou plusieurs imprimantes</li>
+                                    <li>Alerte sonore lorsqu’une commande est réalisée</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 offset-sm-2 order-1 order-sm-2">
+                            <div class="img-col">
+                                <div class="img-holder">
+                                    <img class="abs-image" src="assets/images/printer-img.jpg" alt="mc great phone screen">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="prefooter-section bg-white">
+                <div class="container">
+                    <div class="headline">
+                        <h1 class="h1">Nos services</h1>
+                        <ul>
+                            <li> Formation sur mesure</li>
+                            <li> Conseil </li>
+                            <li> Prise en main à distance</li>
+                            <li> Assistance technique de 9h30 à 18h30</li>
+                            <li> Mise à jour gratuite</li>
+                        </ul>
+                    </div>
+                    <div class="btn-row">
+                        <button class="btn btn-primary btn-lg">Votre transformation digital commence ici, essai gratuit ></button>
+                    </div>
+                    <div class="logo-holder">
+                        <img src="assets/images/hero-logo.jpg" alt="nouvelle logo">
+                    </div>
+                    <div class="conclusion">
+                        <strong> Bâtir un parcours d’achat unifié </strong> est essentiel pour libérer tout le potentiel de votre marque, construire la fidélité de vos clients et ne jamais manquer une vente.
                     </div>
                 </div>
             </section>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-inner">
+                <a href="#" class="logo-holder">
+                    <img src="assets/images/efolix-logo.png" alt="eFolix">
+                </a>
+                <nav>
+                    <a href="#">A propos</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
+                    <a href="#"> Inscription</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
     <script src="assets/js/vendor.min.js" defer></script>
     <script src="assets/js/app.js" defer></script>
 </body>
