--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <a class="nav-link" href="#">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"> Inscription</a>
+                                <a class="nav-link" href="#" data-toggle="modal" data-target="#inscription-modal">Inscription</a>
                             </li>
                         </ul>
 
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="row text-img-row">
-                        <div class="col-sm-6 order-2 order-sm-1">
+                        <div class="col-sm-6">
                             <div class="text-col">
                                 <h3 class="h3">GESTION DE STOCK</h3>
                                 <strong class="subheader">Optimiser vos modèles
@@ -127,7 +127,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-sm-6 order-1 order-sm-2">
+                        <div class="col-sm-6">
                             <div class="img-col">
                                 <div class="shadow-wrapper">
                                     <div class="phone-frame">
@@ -140,12 +140,12 @@
                     <div class="row">
                         <div class="col text-center">
                             <div class="btn-row">
-                                <button type="button" class="btn btn-primary  btn-lg">Votre transformation digital commence ici &gt;</button>
+                                <button type="button" class="btn btn-primary  btn-lg" data-toggle="modal" data-target="#inscription-modal">Votre transformation digital commence ici &gt;</button>
                             </div>
                         </div>
                     </div>
                     <div class="row text-img-row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6  order-2 order-sm-1">
                             <div class="img-col">
                                 <div class="shadow-wrapper">
                                     <div class="phone-frame">
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6  order-1 order-sm-2">
                             <div class="text-col">
                                 <h3 class="h3">VENDRE AUTREMENT </h3>
                                 <strong class="subheader">Une relation client personnalisée
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <div class="row text-img-row">
-                        <div class="col-sm-6 order-2 order-sm-1">
+                        <div class="col-sm-6 ">
                             <div class="text-col">
                                 <h3 class="h3">GESTION DES VRP </h3>
                                 <strong class="subheader">Optimiser votre force de vente</strong>
@@ -181,7 +181,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-sm-6 order-1 order-sm-2">
+                        <div class="col-sm-6 ">
                             <div class="img-col">
                                 <div class="shadow-wrapper">
                                     <div class="phone-frame">
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="row text-img-row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 order-2 order-sm-1">
                             <div class="img-col">
                                 <div class="shadow-wrapper">
                                     <div class="phone-frame">
@@ -201,7 +201,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 order-1 order-sm-2">
                             <div class="text-col">
                                 <h3 class="h3">DIGITALISATION</h3>
                                 <strong class="subheader">Votre présence en ligne</strong>
@@ -218,12 +218,12 @@
                     <div class="row">
                         <div class="col text-center">
                             <div class="btn-row">
-                                <button type="button" class="btn btn-primary  btn-lg">Votre transformation digital commence ici &gt;</button>
+                                <button type="button" class="btn btn-primary  btn-lg" data-toggle="modal" data-target="#inscription-modal">Votre transformation digital commence ici &gt;</button>
                             </div>
                         </div>
                     </div>
                     <div class="row text-img-row">
-                        <div class="col-sm-6 order-2 order-sm-1">
+                        <div class="col-sm-6 ">
                             <div class="text-col">
                                 <h3 class="h3">OUTILS ANALYTIQUE </h3>
                                 <p>Suivre les comportements des visiteurs de votre App client, et ce, du moment où ils sont prospects jusqu'au moment où ils deviennent des clients. Chaque conversion peut être mesurée, et ce, grâce à deux fonctionnalités
@@ -231,7 +231,7 @@
                                     nourrir et faire grandir la relation avec cet extranet de vente grâce à du contenu personnalisé et ciblé afin de fidéliser les clients.</p>
                             </div>
                         </div>
-                        <div class="col-sm-6 order-1 order-sm-2">
+                        <div class="col-sm-6 ">
                             <div class="img-col">
                                 <div class="shadow-wrapper">
                                     <div class="phone-frame">
@@ -242,7 +242,7 @@
                         </div>
                     </div>
                     <div class="row text-img-row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 order-2 order-sm-1">
                             <div class="img-col">
                                 <div class="shadow-wrapper">
                                     <div class="phone-frame">
@@ -251,7 +251,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 order-1 order-sm-2">
                             <div class="text-col">
                                 <h3 class="h3">Maitrise de la trésorerie</h3>
                                 <ul>
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                     <div class="row text-img-row">
-                        <div class="col-sm-4 order-2 order-sm-1">
+                        <div class="col-sm-4 ">
                             <div class="text-col">
                                 <h3 class="h3">Base documentaire
                                 </h3>
@@ -274,7 +274,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-sm-6 offset-sm-2 order-1 order-sm-2">
+                        <div class="col-sm-6 offset-sm-2">
                             <div class="img-col">
                                 <div class="img-holder">
                                     <img class="abs-image" src="assets/images/printer-img.jpg" alt="mc great phone screen">
@@ -297,7 +297,7 @@
                         </ul>
                     </div>
                     <div class="btn-row">
-                        <button class="btn btn-primary btn-lg">Votre transformation digital commence ici, essai gratuit ></button>
+                        <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#inscription-modal">Votre transformation digital commence ici, essai gratuit ></button>
                     </div>
                     <div class="logo-holder">
                         <img src="assets/images/hero-logo.jpg" alt="nouvelle logo">
@@ -319,13 +319,120 @@
                     <a href="#">A propos</a>
                     <a href="#">Blog</a>
                     <a href="#">Contact</a>
-                    <a href="#"> Inscription</a>
+                    <a href="#" data-toggle="modal" data-target="#inscription-modal"> Inscription</a>
                 </nav>
             </div>
         </div>
     </footer>
+    <div class="modal fade" id="inscription-modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Formulaire d’inscription</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div id="result" class="form-send-result"></div>
+                    <form class="incription-form" id="incription-form" method="post" class="needs-validation" novalidate>
+                        <div class="form-row">
+                            <div class="col">
+                                <div class="input-wrapper">
+                                    <input type="text" class="form-control" placeholder="Nom du contact" name="nom_du_contact" required>
+                                    <div class="message">Required</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col">
+                                <div class="input-wrapper">
+                                    <input type="text" class="form-control" placeholder="Nom de la société" required name="nom_de_la_societe" >
+                                    <div class="message">Required</div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-sm-6 ">
+                                <div class="input-wrapper">
+                                    <select class="form-control" name="type_dactivite" required>
+                                    <option value="" selected disabled hidden>Type d’activité</option>
+                                    <option value="Marque">Marque</option>
+                                    <option value="Grossiste">Grossiste</option>
+                                    <option value="Détaillant">Détaillant</option>
+                                  </select>
+                                    <div class="message">Required</div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="input-wrapper">
+                                    <select class="form-control" required name="domaine_dactivite">
+                                    <option value="" selected disabled hidden>Domaine d’activité</option>
+                                    <option value="Homme"> Homme</option>
+                                    <option value="Femme">Femme</option>
+                                    <option value=" Enfant"> Enfant</option>
+                                    <option value="Accessoire">Accessoire</option>
+                                    <option value="Autre">Autre</option>
+                                  </select>
+                                    <div class="message">Required</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-row">
+
+                            <div class="col-sm-6 ">
+                                <div class="input-wrapper">
+                                    <input type="text" class="form-control" placeholder="Ville" required name="ville">
+                                    <div class="message">Required</div>
+                                </div>
+
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="input-wrapper">
+                                    <input type="text" class="form-control" placeholder="Pays" required name="pays">
+                                    <div class="message">Required</div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="form-row">
+                            <div class="col-sm-6">
+                                <div class="input-wrapper">
+                                    <input type="tel" class="form-control" placeholder="Tél" required name="tel">
+                                    <div class="message">Required</div>
+                                </div>
+
+                            </div>
+                            <div class="col-sm-6 ">
+                                <div class="input-wrapper">
+                                    <input type="email" class="form-control" placeholder="E-Mail" required name="email">
+                                    <div class="message">Required</div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col">
+                                <div class="input-wrapper">
+                                    <textarea name="message" class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Votre message" ></textarea>
+                                    <div class="message">Required</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer text-center">
+                            <button type="button" class="btn btn-primary" id="submit-form-btn">Envoyer ma demande</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="assets/js/vendor.min.js" defer></script>
     <script src="assets/js/app.js" defer></script>
+    <script>
+    </script>
 </body>
 
 </html>
