--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             </div>
         </div>
     </footer>
-    <div class="modal fade" id="inscription-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal fade inputModal" id="inscription-modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
